welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value tableau
  for (i<-0 to tableau.length-1){
               ^